[Test] Change MainActivity

--- a/GroupConnect/project.properties
+++ b/GroupConnect/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../../../../Desktop/google-play-services_lib
+android.library.reference.1=..\\..\\..\\..\\Desktop\\google-play-services_lib
+android.library.reference.2=../../../../../../Android-IDE/sdk/extras/google/google_play_services/libproject/google-play-services_lib
