--- a/GroupConnect/AndroidManifest.xml
+++ b/GroupConnect/AndroidManifest.xml
@@ -19,15 +19,27 @@
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
-    <!-- End of copy. -->
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library android:name="com.google.android.maps" />
+
+        <!-- Activity Shared -->
         <activity
             android:name="sg.nyp.groupconnect.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.Map"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,22 +47,67 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="sg.nyp.groupconnect.PieChartBuilder" />
+        <!-- Activity Shared END -->
+
+        <activity
+            android:name="sg.nyp.groupconnect.learner.Search_Group"
+            android:label="@string/title_activity_fragment_grouplist" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.MapActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        <!-- Activity - Alfred -->
+        <activity
+            android:name="sg.nyp.groupconnect.educator.CreateRm"
+            android:label="@string/title_activity_create_rm" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.educator.RoomDetails"
+            android:label="@string/title_activity_room_details" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.educator.ManageRoom"
+            android:label="@string/title_activity_manage_room" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.NotificationDisplay"
+            android:label="@string/title_activity_notification_display" >
+        </activity>
+        <!-- Activity - Geraldine -->
+        <!-- Activity - Teck Chee -->
+        <!-- Activity - Zhen Kang -->
+
+
+        <!-- Services -->
+        <service
+            android:name="sg.nyp.groupconnect.service.GrpRmPullService"
+            android:exported="false" />
+
+        <!-- Activity - Utilities -->
+        <activity android:name="sg.nyp.groupconnect.utilities.BarChartBuilder" />
+        <activity android:name="sg.nyp.groupconnect.utilities.LineChartBuilder" />
+        <activity android:name="sg.nyp.groupconnect.utilities.PieChartBuilder" />
+        <activity android:name="sg.nyp.groupconnect.utilities.VotingfPieChartBuilder" />
         <activity android:name="org.achartengine.GraphicalActivity" />
-        <!-- Geraldine's API Key -->
-        <!--
-        	<meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDMBMbJCOTyWhp08XnGkDSeIF7AxB020AE" />
-        -->
-		
-		<!-- TC's API Key -->
+        <activity android:name="sg.nyp.groupconnect.GeneratedChartDemo" />
+
+        <!-- API KEY -->
+        <!-- Geraldine API KEY -->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.maps.v2.API_KEY" -->
+        <!-- android:value="AIzaSyDMBMbJCOTyWhp08XnGkDSeIF7AxB020AE" /> -->
+        <!-- Teck Chee API KEY -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyAGoZpcDCxO4P59kUlAYDFhyxY4EZvVOQA" />
+            android:value="AIzaSyBgCqtWSR8uC54F9oejiOQ8WwwRKln7MtQ" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <!-- API KEY -->
+
     </application>
 
 </manifest>
