--- a/GroupConnect/AndroidManifest.xml
+++ b/GroupConnect/AndroidManifest.xml
@@ -56,6 +56,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <!-- Alfred API KEY -->
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
@@ -126,6 +127,10 @@
             android:name="sg.nyp.groupconnect.room.ManageRoom"
             android:label="@string/title_activity_manage_room" >
         </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.room.NearbyRooms"
+            android:label="@string/title_activity_nearbyrm" >
+        </activity>
         <!-- src/utilities/ -->
         <activity android:name="sg.nyp.groupconnect.utilities.BarChartBuilder" />
         <activity android:name="sg.nyp.groupconnect.utilities.LineChartBuilder" />
@@ -152,6 +157,11 @@
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
                 <category android:name="sg.nyp.groupconnect" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name="sg.nyp.groupconnect.item.DataReadyReceiver" >
+            <intent-filter>
+                <action android:name="sg.nyp.groupconnect.DATAREADY" />
             </intent-filter>
         </receiver>
     </application>
