--- a/GroupConnect/AndroidManifest.xml
+++ b/GroupConnect/AndroidManifest.xml
@@ -58,17 +58,18 @@
         android:theme="@style/AppTheme" >
 
         <!-- Alfred API KEY -->
-        <!-- <meta-data -->
-        <!-- android:name="com.google.android.maps.v2.API_KEY" -->
-        <!-- android:value="AIzaSyDLqZPbsXFsfvogUzergKrEoi9UbKWuO-4" /> -->
+        <!-- <meta-data 
+        	android:name="com.google.android.maps.v2.API_KEY" 
+         	android:value="AIzaSyBgGLaTvaVSmfK7NdMT5rv7_6sBeKDiP40" />-->
         <!-- Teck Chee API KEY -->
         <!-- <meta-data -->
         <!-- android:name="com.google.android.maps.v2.API_KEY" -->
         <!-- android:value="AIzaSyBgCqtWSR8uC54F9oejiOQ8WwwRKln7MtQ" /> -->
+
         <!-- Geraldine API KEY -->
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDMBMbJCOTyWhp08XnGkDSeIF7AxB020AE" />
+         <meta-data
+    	android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyDMBMbJCOTyWhp08XnGkDSeIF7AxB020AE" /> 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -87,7 +88,11 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="sg.nyp.groupconnect.EditRoom"
+            android:name="sg.nyp.groupconnect.EditRoom1"
+            android:label="@string/app_name" >
+        </activity>
+                <activity
+            android:name="sg.nyp.groupconnect.EditRoom2"
             android:label="@string/app_name" >
         </activity>
         <activity
@@ -106,6 +111,7 @@
             android:name="sg.nyp.groupconnect.VoteMap"
             android:label="@string/app_name" >
         </activity>
+        
         <!-- src/room/ -->
         <activity
             android:name="sg.nyp.groupconnect.room.RoomMap"
@@ -120,12 +126,24 @@
             android:label="@string/title_activity_create_rm_step2" >
         </activity>
         <activity
+            android:name="sg.nyp.groupconnect.room.CreateRmStep3"
+            android:label="@string/title_activity_create_rm_step3" >
+        </activity>
+        <activity
             android:name="sg.nyp.groupconnect.room.RoomsRetrieve"
             android:label="@string/title_activity_fragment_grouplist" >
         </activity>
         <activity
             android:name="sg.nyp.groupconnect.room.ManageRoom"
             android:label="@string/title_activity_manage_room" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.room.RoomDetails"
+            android:label="@string/title_activity_room_details" >
+        </activity>
+        <activity
+            android:name="sg.nyp.groupconnect.room.NotificationDisplay"
+            android:label="@string/title_activity_notification_display" >
         </activity>
         <activity
             android:name="sg.nyp.groupconnect.room.NearbyRooms"
